plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.1'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.asciidoctor.jvm.convert' version '4.0.5'
}

group = 'com'
version = '0.0.1-SNAPSHOT'
description = 'oman'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    set('snippetsDir', file("build/generated-snippets"))
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.2'
    // Google API Client Library
    implementation 'com.google.api-client:google-api-client:2.2.0'
    // Google OAuth2 Client Library for Java
    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
    // YouTube Data API Client Library
    implementation 'com.google.apis:google-api-services-youtube:v3-rev20230911-2.0.0'
    // Jackson (JSON 파싱을 위해 필요)
    implementation 'com.google.api-client:google-api-client-gson:1.35.2'
//    runtimeOnly 'com.mysql:mysql-connector-j'
    implementation 'com.google.apis:google-api-services-youtube:v3-rev20240417-2.0.0'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-restdocs'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    outputs.dir snippetsDir
    useJUnitPlatform()
}

tasks.named('asciidoctor') {
    inputs.dir snippetsDir
    dependsOn test
}
